// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client resources createClient should return a proper new instance of axios 1`] = `
Object {
  "adapter": [Function],
  "headers": Object {
    "X-CSRF-Token": "abcd",
    "X-Gorgias-User-Client": "web",
    "common": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "delete": Object {},
    "get": Object {},
    "head": Object {},
    "patch": Object {
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "post": Object {
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "put": Object {
      "Content-Type": "application/x-www-form-urlencoded",
    },
  },
  "maxBodyLength": -1,
  "maxContentLength": -1,
  "timeout": 0,
  "transformRequest": Array [
    [Function],
  ],
  "transformResponse": Array [
    [Function],
  ],
  "validateStatus": [Function],
  "xsrfCookieName": "XSRF-TOKEN",
  "xsrfHeaderName": "X-XSRF-TOKEN",
}
`;

exports[`client resources handleNewRelease interceptor should notify and reload on new release 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "dismissible": false,
      "message": "An update is available for Gorgias. Click <a>here</a> to reload the page and get the
        latest improvements.",
      "onClick": [Function],
      "status": "info",
      "style": "banner",
    },
  ],
  Array [
    Object {
      "allowHTML": true,
      "buttons": Array [
        Object {
          "name": "Reload",
          "onClick": [Function],
          "primary": true,
        },
      ],
      "dismissAfter": 0,
      "dismissible": false,
      "message": "An update is available for Gorgias. The app will be reloaded automatically in few seconds.",
      "status": "warning",
    },
  ],
]
`;

exports[`client resources resources axios instance should resolve with data 1`] = `
Object {
  "config": Object {
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/api",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "data": Object {
      "foo_bar": 1,
    },
  },
  "headers": Object {
    "x-gorgias-release": "1",
  },
  "request": Object {
    "responseUrl": "/api",
  },
  "status": 200,
}
`;

exports[`client resources resources axios instance should send a request with data 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "data": "{\\"foo_bar\\":\\"foo\\",\\"foo\\":[{\\"foo_bar\\":\\"foo\\"}]}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;
